--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,7 +7,12 @@ jobs:
     runs-on: ubuntu-latest  # this is about production push request
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2  # fixed the spelling and indentation
-
-      - name: Say hi
-        run: echo "hello"
+        uses: actions/checkout@v2
+      - name: Install python version 3.9
+        uses: actions/setup-python@v2
+        with:
+            python-version: "3.9"
+      - name: update pip
+        run: python -m pip install --upgrade pip
+      - name: Install all dependencies
+        run: pip install -r requirements.txt
