--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,6 +4,15 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    env:
+        DATABASE_HOSTNAME: localhost
+        DATABASE_PORT: 5432
+        DATABASE_PASSWORD: Fever364
+        DATABASE_NAME: fastapi
+        DATABASE_USERNAME: postgres
+        SECRET_KEY: 23990fne20f9dn1w0idfnc0284497nsdc020fundszmasa0wpdpp
+        ALGORITHM: HS356
+        ACCESS_TOKEN_EXPIRE_MINUTES: 300
     runs-on: ubuntu-latest  # this is about production push request
     steps:
       - name: Check out repository
