--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,15 +4,17 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    environment:
+        name: Fastapi_env
     env:
-        DATABASE_HOSTNAME: localhost
-        DATABASE_PORT: 5432
-        DATABASE_PASSWORD: Fever364
-        DATABASE_NAME: fastapi
-        DATABASE_USERNAME: postgres
-        SECRET_KEY: 23990fne20f9dn1w0idfnc0284497nsdc020fundszmasa0wpdpp
-        ALGORITHM: HS356
-        ACCESS_TOKEN_EXPIRE_MINUTES: 300
+        DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
+        DATABASE_PORT: ${{secrets.DATABASE_PORT}}
+        DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
+        DATABASE_NAME: ${{secrets.DATABASE_NAME}}
+        DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
+        SECRET_KEY: ${{secrets.SECRET_KEY}}
+        ALGORITHM: ${{secrets.ALGORITHM}}
+        ACCESS_TOKEN_EXPIRE_MINUTES: ${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
     runs-on: ubuntu-latest  # this is about production push request
     steps:
       - name: Check out repository
